<resources>
    <string name="app_name">Space App</string>
    <string name="title_home">Home</string>
    <string name="title_my_spaces">My Spaces</string>
    <string name="title_inbox">Inbox</string>
    <string name="events">Events</string>
    <string name="placeholder">Placeholder</string>
    <string name="discussions">Discussions</string>
    <string name="information_button">Information Button</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="members">Members</string>
    <string name="create_a_space">Create a space</string>
    <string name="join_a_space">Join a space</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="space_code">Space Code</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="event_name">Event Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="infinity">&#8734;</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="next_event">Next event: %1$s</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="attendees">%1$s attendees</string>
    <string name="members_single">1 member</string>
    <string name="members_counted">%1$s members</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="leave_space_dialog_message">Are you sure you want to leave this space?</string>
    <string name="attend">Attend</string>
    <string name="action_register">Register</string>
    <string name="profile_picture_select">Select a profile picture (optional)</string>

    <string name="transition_create_event">transition_create_event</string>
    <string name="unattend">Unattend</string>
    <string name="limit_attendee_count">Limit attendee count?</string>
    <string name="attendee_count">Attendee count</string>
    <string name="remove_image">Remove image</string>
</resources>